--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <title>Dezzosister9</title>
 </head>
+
 <body>
+    <!-- Visible HTML elements GO HERE  -->
+<div> 
     
+</div>
 </body>
 </html>
